added comments to common.conf

--- a/config/common.conf
+++ b/config/common.conf
@@ -1,7 +1,10 @@
 # Global configuration file.
 # ESSENTIAL : Configure Nginx Listening Port
 listen 8080;
+
+# Increase for file uploads in Wordpress
 client_max_body_size 64M;
+
 # ESSENTIAL : Default file to serve. If the first file isn't found, 
 index index.php index.html index.htm;
 # ESSENTIAL : no favicon logs
